sprint-review-ha5kfu/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sprint-review-ha5kfu
  labels:
    app.kubernetes.io/part-of: sprint-review-ha5kfu
