sprint-review-ha5kfu/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprint-review-ha5kfu-backend
  namespace: sprint-review-ha5kfu
  labels:
    app.kubernetes.io/name: sprint-review-backend
    app.kubernetes.io/instance: sprint-review-ha5kfu
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: sprint-review-ha5kfu
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-ingress-class: traefik
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.sprint-review-ha5kfu.kir-dev.hu
      secretName: sprint-review-ha5kfu-backend-tls
  rules:
    - host: api.sprint-review-ha5kfu.kir-dev.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sprint-review-ha5kfu-backend
                port:
                  name: http
